# ChangeLog for media-tv/linuxtv-dvb-apps
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/linuxtv-dvb-apps/ChangeLog,v 1.44 2010/02/23 19:57:40 zzam Exp $

*linuxtv-dvb-apps-1.1.1.20100223 (23 Feb 2010)

  23 Feb 2010; Matthias Schwarzott <zzam@gentoo.org>
  +linuxtv-dvb-apps-1.1.1.20100223.ebuild:
  Added new snapshot.

  21 Dec 2008; nixnut <nixnut@gentoo.org>
  linuxtv-dvb-apps-1.1.1.20080317.ebuild:
  Stable on ppc wrt bug 247995

  28 Nov 2008; Markus Meier <maekke@gentoo.org>
  linuxtv-dvb-apps-1.1.1.20080317.ebuild:
  amd64/x86 stable, bug #247995

  21 Nov 2008; Santiago M. Mola <coldwind@gentoo.org>
  linuxtv-dvb-apps-1.1.0.ebuild, linuxtv-dvb-apps-1.1.1.20060917.ebuild,
  linuxtv-dvb-apps-1.1.1.20070114.ebuild,
  linuxtv-dvb-apps-1.1.1.20070924.ebuild,
  linuxtv-dvb-apps-1.1.1.20071126.ebuild,
  linuxtv-dvb-apps-1.1.1.20071201.ebuild,
  linuxtv-dvb-apps-1.1.1.20080113.ebuild,
  linuxtv-dvb-apps-1.1.1.20080317.ebuild:
  Block dev-db/xbase (bug #208596). Fix DEPEND.

*linuxtv-dvb-apps-1.1.1.20080317 (17 Mar 2008)

  17 Mar 2008; Matthias Schwarzott <zzam@gentoo.org>
  +linuxtv-dvb-apps-1.1.1.20080317.ebuild:
  Added new snapshot. This mainly adds new scan files.

*linuxtv-dvb-apps-1.1.1.20080113 (21 Jan 2008)

  21 Jan 2008; Matthias Schwarzott <zzam@gentoo.org>
  +linuxtv-dvb-apps-1.1.1.20080113.ebuild:
  Added new snapshot.

*linuxtv-dvb-apps-1.1.1.20071201 (01 Dec 2007)

  01 Dec 2007; Matthias Schwarzott <zzam@gentoo.org>
  +linuxtv-dvb-apps-1.1.1.20071201.ebuild:
  Added new snapshot. This solves Bug #200608

  27 Nov 2007; Matthias Schwarzott <zzam@gentoo.org>
  linuxtv-dvb-apps-1.1.0.ebuild, linuxtv-dvb-apps-1.1.1.20060917.ebuild,
  linuxtv-dvb-apps-1.1.1.20070114.ebuild,
  linuxtv-dvb-apps-1.1.1.20070924.ebuild,
  linuxtv-dvb-apps-1.1.1.20071126.ebuild:
  Fixed quoting.

*linuxtv-dvb-apps-1.1.1.20071126 (26 Nov 2007)

  26 Nov 2007; Matthias Schwarzott <zzam@gentoo.org>