@@ -2,30 +2,20 @@
 Hash: SHA1
 
 AUX linuxtv-dvb-apps-20070114-linux-headers-2.6.22.diff 485 RMD160 770c70019cecfcd4202aa7c59598bdfddfc3e3df SHA1 47fc8e8bae1fc3c53d522c20b509618bf6aa2bcc SHA256 a75badcabe081924d0fdcdfa844b81b429478e042c9902e619f95e929f8c81e8
-DIST linuxtv-dvb-apps-1.1.0.tar.bz2 73973 RMD160 ba16fca5565568fc053586794466205c5314b0b9 SHA1 f57966f177eadd94253f9b92280fe00aa1bb3324 SHA256 5b3b6d16995cc31024f2340f9b56bdd28bc8569ac4bf75392575fe9605c1e1b9
 DIST linuxtv-dvb-apps-20060917.tar.bz2 278797 RMD160 7d4478f0baa698ed62327993c5d9fd2e51c852f8 SHA1 17d1281adede30215466edbaa5b521f963e3ea60 SHA256 535f9d68e5f49650f12ec39aa3b7f4c9a5a07af9a7cd7addc210d8083743aaf0
 DIST linuxtv-dvb-apps-20070114.tar.bz2 311657 RMD160 7903be5c782d76829d00f16345e1f869e663bbc9 SHA1 026c3e45fb778e399384f23d4eab7dc03c66dd9c SHA256 c4fbe3df4cf02a63fb8b6c6343b33b13cfa0400559224e40421f227fa27e5afd
-DIST linuxtv-dvb-apps-20070924.tar.bz2 306662 RMD160 c21c0aba869d47f8f8e4c2bf62b2a23476a8e5c3 SHA1 53da1e43517d5309d53726ca2a8b6dffd6379474 SHA256 1cb3e2c40512fb3f2d89df7319bdbdf472a05f03ac3333729738810c3a58fc37
-DIST linuxtv-dvb-apps-20071126.tar.bz2 306951 RMD160 33d271e837fced1fdb8a587eb4e9b8226e0d10ed SHA1 8f05503c243cb6d0e83803378f5c43fbab157d40 SHA256 bf79dc46135d0a3ee978293ab38b17e898dbf06501c67c93dd6726c6b621e0fa
-DIST linuxtv-dvb-apps-20071201.tar.bz2 306775 RMD160 a26e9c06e90c5fc32326e54eadb4bd8a0537fecd SHA1 f45f3b4cfa00d5492ca4ac3e7663d57fee620e5b SHA256 c40e598d45b7be0656485a6a455ad7c20b1f0ffc06216e9dee367685d08457ea
-DIST linuxtv-dvb-apps-20080113.tar.bz2 313135 RMD160 5d1c928cd335e69171628a4e2965338f083b57fd SHA1 f45b8a436fa3ab5d2464194b7fb9905f5ea7c7e9 SHA256 0703a4d39b81cf9f764110aead7669cdab9245f9bd597e13455de178d0e61c07
 DIST linuxtv-dvb-apps-20080317.tar.bz2 314588 RMD160 0f3248ecddd82e33304797d1ab1df1cc631e2871 SHA1 cd29d7a4658e922cf2e947c9034e051f9d35d2d7 SHA256 639c9240e8944b95f7e78efdbb42ad866b965af68e420f614dabefd22adf5cdf
 DIST linuxtv-dvb-apps-20100223.tar.bz2 429129 RMD160 586c1ead07cc9f288d67dd923b1a327029f09bf9 SHA1 bbedcfa4a3ff0e1ab3da66c3b0d19bb081a725af SHA256 8a657a1479de665a6d95d8f5585ffd0228232e1a030b88435d4c40d85e983461
-EBUILD linuxtv-dvb-apps-1.1.0.ebuild 2192 RMD160 40091d0d8dba0ec3df81edef2f2c5112b44be32d SHA1 567b96fd5bdc230543e52035739cfd51d452efda SHA256 b94b04e89dc1d2c7b3bd4db26ff63489ab05a8a6d8de9a76a2e3d43395df1e58
 EBUILD linuxtv-dvb-apps-1.1.1.20060917.ebuild 2510 RMD160 c678fd41c462bb8e6df69f3c98457a33bf59b382 SHA1 5e7a8948dc8430210a7de0b44f490bbd1b64e16a SHA256 c519efd6bb2cab06bf18dbbf4b5c2da2dd3f8d44516c72b761b0fa2b6c84da32
 EBUILD linuxtv-dvb-apps-1.1.1.20070114.ebuild 2457 RMD160 d3f9823908953d7f77f772ccdfb26d01e69d8603 SHA1 41038f4a93c4927e9af45e7bd52fa3974cafca4a SHA256 b9391fdaed50f18a4459b3646f52531228357b76aebf57059f706171a922ce2a
-EBUILD linuxtv-dvb-apps-1.1.1.20070924.ebuild 2275 RMD160 09f389a378d8548a9de2ce78343c5dd8124f7f40 SHA1 eebf46a8f583b11b6332b0a3856608c2efee3057 SHA256 d4552e2e4ce384c4be42c830ff0be253558cd8d58455da8de7042df13c229ce5
-EBUILD linuxtv-dvb-apps-1.1.1.20071126.ebuild 2275 RMD160 1ae0785485badf4af76b4e78fb471e25d0c4218d SHA1 b6ba75acd4157661e999609bc480823c24783ff6 SHA256 85a453bd247a22369a3b53f75ca2d6c48e5d036c9aa50329e6251297059db23e
-EBUILD linuxtv-dvb-apps-1.1.1.20071201.ebuild 2275 RMD160 0af5515052b8003d96bfbf92ca056b77935959c4 SHA1 876b71adfbf427f163ea3ee4e01a86fe5be0e7f1 SHA256 4249b7231830f41cc75062b64f6f169e6b65dd02c23007a8f7adb84847b3ab66
-EBUILD linuxtv-dvb-apps-1.1.1.20080113.ebuild 2275 RMD160 7b3cc9b6ed8c1ff4d417484238ae5a1cf0c4dbee SHA1 570dae6041900b7eac0e139dd599586d9ebc0c31 SHA256 de039b1d1615ac704338a9db13a0e6de02e82ca98337d4f6bf86ca09062d9b14
 EBUILD linuxtv-dvb-apps-1.1.1.20080317.ebuild 2270 RMD160 6435ee19cf68be578416dd9d02bcd44fac1b5a8f SHA1 b0324b6fe5e01d7ad38e0e42cff73728d5e573c2 SHA256 d8d39e92b7533cfd4b65450945985ffdebd45174f76cb2dddbc3580154c56b07
 EBUILD linuxtv-dvb-apps-1.1.1.20100223.ebuild 2111 RMD160 a43667280dd86b806b60ee9ba87cadf2f71908f2 SHA1 a74e55d93870d0c5b7b596d912cb14ecf34eca76 SHA256 18b1066f481343b8536dae0be1fbf3746a6fbdc8f1a8aeff625c58d546c746e8
-MISC ChangeLog 8568 RMD160 095092779eba3154591eafa5e842a0b82dff6795 SHA1 d7682a3f85f1dbb6a99a473ff7fe80ceffd2f1ec SHA256 d562d3bb10fb2b63f09a149b0f0070c320d61a4c529b090ab3f392ae587178ff
+MISC ChangeLog 8858 RMD160 b95e675be2008dd828b3568fa35abe39366d5bd7 SHA1 745ce1ec7a8958092597022c5737b9033dd1e343 SHA256 1a461c2ab956acf4a09b4d944d5aa4cb3c53fa1ec429f87e6015bfa4921a8da7
 MISC metadata.xml 161 RMD160 fee76f69ba822cd04301c58fa0c26ecaf8cc8fb9 SHA1 0aee2176f15a238a6d8fbbf83e4e0fd58653a3fa SHA256 82d33b3ca60662bc745d30d53bb20d04ea588d5aae556ed16efcacdcc37fd4bd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuEMx4ACgkQt2vP6XvVdOefRACgh09/86OWSwPdF9tTdvAIxr5W
-BIUAnArao9RhHfjbateO/h+oIfxifa/u
-=rAlj
+iEYEARECAAYFAkuEOgsACgkQt2vP6XvVdOfdOwCZAf/os7/TZdEYwaoNgY70vG1F
+ap8AoKngZkC+6xQmJo4Mpzw0BA4Uv3ks
+=O1F7
 -----END PGP SIGNATURE-----
