@@ -1,6 +1,13 @@
 # ChangeLog for media-tv/linuxtv-dvb-apps
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/linuxtv-dvb-apps/ChangeLog,v 1.44 2010/02/23 19:57:40 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/linuxtv-dvb-apps/ChangeLog,v 1.45 2010/02/23 20:27:11 zzam Exp $
+
+  23 Feb 2010; Matthias Schwarzott <zzam@gentoo.org>
+  -linuxtv-dvb-apps-1.1.0.ebuild, -linuxtv-dvb-apps-1.1.1.20070924.ebuild,
+  -linuxtv-dvb-apps-1.1.1.20071126.ebuild,
+  -linuxtv-dvb-apps-1.1.1.20071201.ebuild,
+  -linuxtv-dvb-apps-1.1.1.20080113.ebuild:
+  Removed a lot of old ebuilds.
 
 *linuxtv-dvb-apps-1.1.1.20100223 (23 Feb 2010)
 
